--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+button:focus {
+    outline: 0;
+}
+
 #left {
     height: 100%;
     padding: 0px;
@@ -18,7 +22,7 @@ body {
 }
 
 #displayText {
-    height: auto;
+    height: 300px;
     width: 80%;
     margin: auto;
     font-size: 1.7em;
@@ -52,12 +56,12 @@ input:focus {
     height: 100px;
     width: 100%;
     position: relative;
-    background-color: #F2E9D8;
+    background-color: #E3EBF3;
     color: #173040;
 }
 
 .para:hover {
-    background-color: #173040;
+    background-color: #1D2428;
     color: #E3EBF3;
 }
 
@@ -100,7 +104,7 @@ input:focus {
     border-right: 1px solid black;
     width: 100%;
     height: 100vh;
-    background-color: #F2E9D8;
+    background-color: #E3EBF3;
 }
 
 #btn,
